--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" type="text/css" href="/dist/style.css" media="screen" />
 </head>
 <body>
-    <div id="app">
-        <App></App>
-    </div>
-    <!-- APP -->
+    <div id="app"></div>
+    <!-- APP -->    
     <script src="/dist/web.bundle.js"></script>
 </body>
 </html>
